8236125: Windows (MSVC 2013) build fails in jpackage: Need to include strsafe.h after tchar.h

Reviewed-by: shade, alanb, herrick, prr